Gộp Nam Long Mạnh

--- a/src/main/resources/templates/kh-success.html
+++ b/src/main/resources/templates/kh-success.html
@@ -95,7 +95,7 @@
 
     <div>
         <a href="/" class="btn">Trang chủ</a>
-        <a href="/don-mua" class="btn">Xem đơn hàng</a>
+        <a href="/dsdon-mua?status=tat-ca" class="btn">Xem đơn hàng</a>
     </div>
 </div>
 </body>
