--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -274,7 +274,7 @@
   <!-- Header -->
   <div style="background-color: #ea580c; color: white; padding: 12px 16px; display: flex; align-items: center; gap: 10px;">
     <img src="https://img.icons8.com/emoji/48/robot-emoji.png" style="width: 32px; height: 32px;">
-    <div style="font-weight: bold;">ACV ChatBot</div>
+    <div style="font-weight: bold;">ACV Bot</div>
     <span id="chatbot-close" style="margin-left: auto; cursor: pointer;">&times;</span>
   </div>
 
