--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -81,7 +81,7 @@
           <li><a class="dropdown-item" th:href="@{/account/profile}">Tài khoản của tôi</a></li>
           <li><a class="dropdown-item" th:href="@{/dsdon-mua}">Đơn mua</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item text-danger" th:href="@{/logout}">Đăng xuất</a></li>
+          <li><a class="dropdown-item text-danger" th:href="@{/customers/logout}">Đăng xuất</a></li>
         </ul>
       </div>
 
